# ncp-contact-mechanics

./: .gitignore  README.md  pyproject.toml
example_2d/: compare_2d.py  evaluate_test_2d.py  main.py  run.py  run_test_2d.py  test_2d.py
example_2d/fracture_generator/: random_fractures_0.csv  random_fractures_1.csv  random_fractures_10.csv  random_fractures_11.csv  random_fractures_12.csv  random_fractures_13.csv  random_fractures_14.csv  random_fractures_15.csv  random_fractures_16.csv  random_fractures_17.csv  random_fractures_18.csv  random_fractures_19.csv  random_fractures_2.csv  random_fractures_3.csv  random_fractures_4.csv  random_fractures_5.csv  random_fractures_6.csv  random_fractures_7.csv  random_fractures_8.csv  random_fractures_9.csv
example_2d/setups/: geometry.py  numerics.py  physics.py  statistics.py
example_3d/: compare_3d.py  evaluate_performance_3d.py  evaluate_test_3d.py  main.py  run.py  run_instructions.py  run_test_3d.py  test_3d.py
example_3d/reference/simple_bedretto_2/: data_2_000000.vtu  data_3_000003.vtu  data_mortar_2_000000.vtu  data_mortar_2_000001.vtu  data_mortar_2_000002.vtu  times.json
example_3d/reference/simple_bedretto_2/1/: data_2_000000.vtu  data_2_000001.vtu  data_2_000002.vtu  data_2_000003.vtu  data_3_000001.vtu  data_3_000002.vtu  data_3_000003.vtu  data_mortar_2_000001.vtu  data_mortar_2_000002.vtu  data_mortar_2_000003.vtu  solver_statistics.json
example_3d/reference/simple_bedretto_2/1e+10/: data_2_000001.vtu  data_2_000002.vtu  data_2_000003.vtu  data_3_000001.vtu  data_3_000002.vtu  data_mortar_2_000003.vtu  solver_statistics.json
example_3d/reference/simple_bedretto_2_sigma_h/: data_2_000002.vtu  data_3_000001.vtu  data_mortar_2_000001.vtu  data_mortar_2_000002.vtu
example_3d/reference/simple_bedretto_2_sigma_h/1/: data_2_000001.vtu  data_2_000002.vtu  (+8 more)
example_3d/setups/: geometry.py  physics.py  statistics.py
scripts/: checkout_porepy.sh
src/ncp/: __init__.py  contact_mechanics.py  cubic_normal_perm.py  fracture_states.py  functions.py  iteration_export.py  metric.py  nonlinear_solvers.py  numerics.py  solution_strategy.py  statistics.py  utils.py
(+30 files in other folders)
