[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "icecream",
    #     "asttokens==3.0.0",
    #     "colorama==0.4.6",
    #     "contourpy==1.3.1",
    #     "cycler==0.12.1",
    #     "deepdiff==8.2.0",
    #     "executing==2.2.0",
    #     "fonttools==4.56.0",
    #     "future==1.0.0",
    #     "gmsh==4.13.1",
    #     "icecream==2.1.4",
    #     "intel-cmplr-lib-ur==2025.0.5",
    #     "intel-openmp==2025.0.5",
    #     "kiwisolver==1.4.8",
    #     "llvmlite==0.44.0",
    #     "markdown-it-py==3.0.0",
    #     "matplotlib==3.10.0",
    #     "mdurl==0.1.2",
    #     "meshio==5.3.5",
    #     "mkl==2025.0.1",
    #     "mpmath==1.3.0",
    #     "networkx==3.4.2",
    #     "numba==0.61.0",
    #     "numpy==2.1.3",
    #     "orderly-set==5.3.0",
    #     "packaging==24.2",
    #     "pandas==2.2.3",
    #     "pillow==11.1.0",
    #     "Pygments==2.19.1",
    #     "pypardiso==0.4.6",
    #     "pyparsing==3.2.1",
    #     "python-dateutil==2.9.0.post0",
    #     "pytz==2025.1",
    #     "rich==13.9.4",
    #     "scipy==1.15.2",
    #     "seaborn==0.13.2",
    #     "setuptools==75.8.0",
    #     "shapely==2.0.7",
    #     "six==1.17.0",
    #     "sympy==1.13.3",
    #     "tbb==2022.0.0",
    #     "tcmlib==1.2.0",
    #     "typing_extensions==4.12.2",
    #     "tzdata==2025.1",
    #     "umf==0.9.1",
    #     "pytest",
]
name = "ncp"
version = "0.0.1"
description = "Nonlinear complementarity formulations for modeling of contact mechanics in PorePy"
keywords = ["porepy", "ncp", "contact mechanics"]
maintainers = [{ name = "Jakub Both", email = "jakub.both@uib.no" }]
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ncp" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E501"]
ignore = ["E731", "E266"]
exclude = ["__init__.py"]
